# crappy

./: .gitignore  .readthedocs.yml  CODEOWNERS  DESCRIPTION.rst  MANIFEST.in  README.md  README.rst  about.txt  clean.sh  pyproject.toml  requirements.txt  setup.py  test.txt  windows_install.txt
Examples/: .biotens.py.kate-swp  Arduino_Minitens.py  Instron_measures.py  Instron_measures_with_labjack.py  Main_tribo_interface.py  Main_tribo_interface_v2.py  OrientalBiaxe.py  basic.py  biaxe.py  biaxe_correl.py  biaxe_util.py  biotens-rt.py  biotens.py  biotens_cycles.py  biotens_pilotagedefmoteur.py  cam_variable_freq.py  camera_crappy.py  client.py  condition_alert_mail.py  conditions.py  conditions_examples.py  controlCommand.py  correl-rt-disflow.py  correl.py  correl_advanced.py  correl_basic.py  correl_fake_test.py  correl_simple.py  correl_strain_controlled_fake_test.py  crappy_TTC.py  crappy_TTC_fatigue.py  custom_actuator.py  custom_block.py  custom_camera.py  custom_in.py  custom_out.py  daqmx.py  dio_daqmx.py  dis-correl.py  discorrel_basic.py  (+79 more)
StandAlone/: ximea_display.py
crappy/: __init__.py  __version__.py  _deprecated.py  _global.py  _start.py  _stop.py  _warnings.py  available.py  blocks.py  links.py
crappy/Examples/: open_log.py
crappy2/: __init__.py  __version__.py  _deprecated.py  _warnings.py
data/: kernels.cu  ve_markers.tif
doc/: Doxyfile  HOWTO  Makefile  about.txt  config  make.bat
docs/: Makefile  README.md
examples/: README.md
impact/: biaxe.py  biotens.py  furnace.py  video_extenso_auto_drive.py  video_extenso_full.py
sample.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: README.md
tests/: PID_test.py  README.md  __init__.py  arduino_minitens.py  control_command.py  debugg_flag.py  dict_test.py  dispatcher_trigger.py  global_kill_pill.py  hf_save.py  kollmorgen.py  link_timeout.py  memory_leak_pandas.py  multipath_test.py  reshape.py  signal+graphe.py  signal_tester.py  streamer_comedi.py  streamer_labjack.py  test_camera.py  test_daqmx.py  test_freq_instron.py  test_impulsions.py  test_labjacktechnical.py  test_opendaq.py  test_plotpad.py  test_rapher.py  test_saverTriggered.py  test_sensor.py  test_socket_client.py  test_streamer_comedi.py  test_streamer_labjack.py  test_streamer_opendaq.py  test_wavegenerator.py  webcam.py
util/: README.md  Set_ft232h_serial_nr.py  biaxe.py  biaxe_independant_axis_protection.py  biaxe_protection.py  biaxe_util.py  interfaceCMdrive.py  open_hdf.py  oriental.py  pid_autotune.py  set_ft232h_serial_nr.py  test_graph.py  udev_rule_setter.sh
(+2376 files in other folders)
